--- a/fieldBy/Main/Info/Info.storyboard
+++ b/fieldBy/Main/Info/Info.storyboard
@@ -94,15 +94,6 @@
                                             <constraint firstAttribute="height" constant="90" id="F6Y-0G-p5W"/>
                                         </constraints>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cwA-bW-EHp">
-                                        <rect key="frame" x="329" y="136" width="67" height="31"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                                        <connections>
-                                            <action selector="test:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="1VF-ec-Fgw"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -114,6 +105,55 @@
                                     <constraint firstItem="Rtx-jh-TF3" firstAttribute="leading" secondItem="DIk-Em-xLE" secondAttribute="leading" id="cO5-9s-hD0"/>
                                     <constraint firstAttribute="trailing" secondItem="Rtx-jh-TF3" secondAttribute="trailing" id="jLd-G8-BUO"/>
                                     <constraint firstItem="sNN-di-cmh" firstAttribute="top" secondItem="UBA-ik-pM9" secondAttribute="bottom" constant="7" id="yIo-dA-TIB"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ikj-cQ-4pU">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cwA-bW-EHp">
+                                        <rect key="frame" x="125" y="252" width="164" height="38"/>
+                                        <color key="backgroundColor" name="Black"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="164" id="JOm-PA-IoC"/>
+                                            <constraint firstAttribute="height" constant="38" id="xT6-7R-ATx"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="15"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="미디어 연결">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="test:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="1VF-ec-Fgw"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="💡" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H8w-gu-ovI">
+                                        <rect key="frame" x="186.5" y="117" width="41" height="43"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                        <color key="textColor" name="Black"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아직 연결된 미디어가 없어요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vdM-ie-sAH">
+                                        <rect key="frame" x="104" y="177" width="206" height="22"/>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="18"/>
+                                        <color key="textColor" name="Black"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="연결하시면 다양한 캠페인 참여가 가능해요!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W84-op-Z6e">
+                                        <rect key="frame" x="97.5" y="209" width="219.5" height="16"/>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
+                                        <color key="textColor" name="Black"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="cwA-bW-EHp" secondAttribute="bottom" constant="10" id="7TC-BS-qxu"/>
+                                    <constraint firstItem="H8w-gu-ovI" firstAttribute="centerX" secondItem="ikj-cQ-4pU" secondAttribute="centerX" id="OKX-fI-kAz"/>
+                                    <constraint firstItem="W84-op-Z6e" firstAttribute="top" secondItem="vdM-ie-sAH" secondAttribute="bottom" constant="10" id="Okp-Eb-CA8"/>
+                                    <constraint firstItem="vdM-ie-sAH" firstAttribute="top" secondItem="H8w-gu-ovI" secondAttribute="bottom" constant="17" id="cZL-Nu-pvE"/>
+                                    <constraint firstItem="cwA-bW-EHp" firstAttribute="centerX" secondItem="ikj-cQ-4pU" secondAttribute="centerX" id="fIO-uc-0zW"/>
+                                    <constraint firstItem="W84-op-Z6e" firstAttribute="centerX" secondItem="ikj-cQ-4pU" secondAttribute="centerX" id="kAN-TH-yvs"/>
+                                    <constraint firstItem="vdM-ie-sAH" firstAttribute="centerX" secondItem="ikj-cQ-4pU" secondAttribute="centerX" id="n7l-Va-5NM"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mOw-AO-zjw">
@@ -268,14 +308,19 @@
                         <viewLayoutGuide key="safeArea" id="c8I-jc-9aN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="ikj-cQ-4pU" firstAttribute="bottom" secondItem="DIk-Em-xLE" secondAttribute="bottom" id="3XZ-Ro-Uad"/>
                             <constraint firstItem="mOw-AO-zjw" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="4wl-mR-FBt"/>
                             <constraint firstAttribute="bottom" secondItem="p9l-SO-Wdw" secondAttribute="bottom" id="5kV-xN-JfS"/>
                             <constraint firstItem="swn-B8-WcZ" firstAttribute="top" secondItem="mOw-AO-zjw" secondAttribute="bottom" constant="29" id="6iT-1Z-FB6"/>
                             <constraint firstItem="p9l-SO-Wdw" firstAttribute="top" secondItem="DIk-Em-xLE" secondAttribute="bottom" constant="30" id="B9q-fS-UZc"/>
+                            <constraint firstItem="ikj-cQ-4pU" firstAttribute="leading" secondItem="DIk-Em-xLE" secondAttribute="leading" id="DWy-1B-sFC"/>
+                            <constraint firstItem="ikj-cQ-4pU" firstAttribute="trailing" secondItem="DIk-Em-xLE" secondAttribute="trailing" id="EkH-nN-A9k"/>
                             <constraint firstAttribute="trailing" secondItem="p9l-SO-Wdw" secondAttribute="trailing" id="NHv-z9-cOO"/>
                             <constraint firstItem="DIk-Em-xLE" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="OV3-Ch-NWA"/>
                             <constraint firstAttribute="trailing" secondItem="DIk-Em-xLE" secondAttribute="trailing" id="S5z-om-pSJ"/>
+                            <constraint firstItem="ikj-cQ-4pU" firstAttribute="top" secondItem="DIk-Em-xLE" secondAttribute="top" id="Wa3-O9-4Ua"/>
                             <constraint firstItem="mOw-AO-zjw" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="cwE-0R-D0e"/>
+                            <constraint firstItem="H8w-gu-ovI" firstAttribute="top" secondItem="mOw-AO-zjw" secondAttribute="bottom" constant="17" id="eWT-BG-vxp"/>
                             <constraint firstItem="UBA-ik-pM9" firstAttribute="top" secondItem="mOw-AO-zjw" secondAttribute="bottom" constant="35" id="fpk-KS-I1a"/>
                             <constraint firstItem="p9l-SO-Wdw" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="r0f-EC-4vq"/>
                             <constraint firstItem="DIk-Em-xLE" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="r32-TU-tJ7"/>
@@ -285,6 +330,9 @@
                     <connections>
                         <outlet property="campaignCounts" destination="clI-SS-vB1" id="Zw7-xl-3Yj"/>
                         <outlet property="followersCountLabel" destination="sNN-di-cmh" id="qaD-jz-TCk"/>
+                        <outlet property="mediaButton" destination="cwA-bW-EHp" id="DcX-Hz-HHK"/>
+                        <outlet property="noMediaView" destination="ikj-cQ-4pU" id="zo1-UH-c4I"/>
+                        <outlet property="normalView" destination="DIk-Em-xLE" id="lfS-mj-isH"/>
                         <outlet property="profileImageView" destination="swn-B8-WcZ" id="hUh-MW-xX5"/>
                         <outlet property="topView" destination="mOw-AO-zjw" id="mBX-2g-GGU"/>
                         <outlet property="totalRewardsLabel" destination="aTl-qF-DvW" id="V7J-CW-uEz"/>
