--- a/fieldBy/Main/Info/ApiGuide/ApiGuide.storyboard
+++ b/fieldBy/Main/Info/ApiGuide/ApiGuide.storyboard
@@ -47,7 +47,6 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <action selector="backButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="0QA-eG-DfY"/>
                                             <action selector="getMedia:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="KMY-B9-1oj"/>
                                         </connections>
                                     </button>
@@ -104,6 +103,10 @@
                                 <color key="textColor" name="Black"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="kM7-ma-3cq">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="연결 가이드" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M0k-e4-Vl8">
                                 <rect key="frame" x="29" y="691.5" width="60" height="16"/>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
@@ -132,6 +135,7 @@
                     <connections>
                         <outlet property="collectionView" destination="WMO-Pt-7A5" id="v4c-bU-4Bo"/>
                         <outlet property="guideLabel" destination="zE3-Pc-mw7" id="kRG-UQ-lo9"/>
+                        <outlet property="indicator" destination="kM7-ma-3cq" id="vbZ-YD-Fdz"/>
                         <outlet property="mediaButton" destination="joS-m4-ZA3" id="Byc-sy-EAf"/>
                     </connections>
                 </viewController>
@@ -139,9 +143,154 @@
             </objects>
             <point key="canvasLocation" x="-26.086956521739133" y="75.669642857142847"/>
         </scene>
+        <!--Feed List View Controller-->
+        <scene sceneID="Y8x-8Q-kkF">
+            <objects>
+                <viewController storyboardIdentifier="feedlistVC" id="xhu-Yo-Giu" customClass="FeedListViewController" customModule="fieldBy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4GS-9T-SJi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CRK-oK-LOo">
+                                <rect key="frame" x="0.0" y="782" width="414" height="114"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="exW-dU-stt">
+                                        <rect key="frame" x="20" y="19" width="374" height="56"/>
+                                        <color key="backgroundColor" name="MainColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="56" id="hJ7-wp-2UU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="16"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="선택 완료(0/3)">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="XAC-tE-VsQ"/>
+                                            <action selector="getMedia:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="llS-sf-lr9"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="exW-dU-stt" firstAttribute="centerY" secondItem="CRK-oK-LOo" secondAttribute="centerY" constant="-10" id="Ob9-Df-AoL"/>
+                                    <constraint firstItem="exW-dU-stt" firstAttribute="centerX" secondItem="CRK-oK-LOo" secondAttribute="centerX" id="iTY-aL-uPA"/>
+                                    <constraint firstItem="exW-dU-stt" firstAttribute="leading" secondItem="CRK-oK-LOo" secondAttribute="leading" constant="20" id="j3v-14-tqe"/>
+                                    <constraint firstAttribute="height" constant="114" id="sVh-A3-4Z3"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dXx-Ba-qxC">
+                                <rect key="frame" x="10" y="38" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="5ql-SS-R0P"/>
+                                    <constraint firstAttribute="height" constant="50" id="iVL-m8-kOw"/>
+                                </constraints>
+                                <color key="tintColor" name="Black"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="chevron.left" catalog="system"/>
+                                <connections>
+                                    <action selector="backButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="J2t-3H-V48"/>
+                                </connections>
+                            </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jCf-lm-5TE">
+                                <rect key="frame" x="24" y="289.5" width="366" height="492.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="15" minimumInteritemSpacing="19" id="zWB-Yt-Cj2">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="feedCell" id="zL3-hC-SUP" customClass="FeedCell" customModule="fieldBy" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Kld-pM-03x">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1t0-xI-jhG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="1t0-xI-jhG" secondAttribute="bottom" id="9Xz-Oc-ytB"/>
+                                                <constraint firstItem="1t0-xI-jhG" firstAttribute="leading" secondItem="Kld-pM-03x" secondAttribute="leading" id="KBn-Wp-Xhj"/>
+                                                <constraint firstAttribute="trailing" secondItem="1t0-xI-jhG" secondAttribute="trailing" id="Ldm-yM-fEe"/>
+                                                <constraint firstItem="1t0-xI-jhG" firstAttribute="top" secondItem="Kld-pM-03x" secondAttribute="top" id="jEu-Na-E33"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="mainImageView" destination="1t0-xI-jhG" id="kc5-wz-c6M"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blur" translatesAutoresizingMaskIntoConstraints="NO" id="6fV-cg-cCf">
+                                <rect key="frame" x="0.0" y="715" width="414" height="67"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="브랜드에게 본인을 알리기 위해" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VTV-9y-q2t">
+                                <rect key="frame" x="20" y="116" width="217" height="22"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="18"/>
+                                <color key="textColor" name="Black"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="콘텐츠를 선택해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tmg-Tf-HFc">
+                                <rect key="frame" x="20" y="138" width="160.5" height="22"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="18"/>
+                                <color key="textColor" name="Black"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNw-AA-Mhi">
+                                <rect key="frame" x="20" y="182" width="247" height="43.5"/>
+                                <string key="text">이 콘텐츠는 브랜드에게 노출이 되는 콘텐츠입니다. 
+본인을 가장 잘 나타낼수있는 콘텐츠를 선택해주세요. (골프 콘텐츠 필수선택 1장 이상)</string>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="12"/>
+                                <color key="textColor" red="0.46274509803921571" green="0.43529411764705883" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Fr3-PK-rIY">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="sfE-sY-FfE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="CRK-oK-LOo" firstAttribute="top" secondItem="6fV-cg-cCf" secondAttribute="bottom" id="1Bf-f7-Ztx"/>
+                            <constraint firstItem="sfE-sY-FfE" firstAttribute="trailing" secondItem="jCf-lm-5TE" secondAttribute="trailing" constant="24" id="8tG-bW-K9y"/>
+                            <constraint firstItem="tNw-AA-Mhi" firstAttribute="top" secondItem="tmg-Tf-HFc" secondAttribute="bottom" constant="22" id="MSR-h0-0NQ"/>
+                            <constraint firstItem="CRK-oK-LOo" firstAttribute="top" secondItem="jCf-lm-5TE" secondAttribute="bottom" id="NRA-Ng-9ng"/>
+                            <constraint firstItem="tmg-Tf-HFc" firstAttribute="top" secondItem="VTV-9y-q2t" secondAttribute="bottom" id="OpH-y5-JJG"/>
+                            <constraint firstItem="CRK-oK-LOo" firstAttribute="leading" secondItem="4GS-9T-SJi" secondAttribute="leading" id="Tub-so-DfS"/>
+                            <constraint firstItem="sfE-sY-FfE" firstAttribute="trailing" secondItem="6fV-cg-cCf" secondAttribute="trailing" id="TyA-fS-wSi"/>
+                            <constraint firstItem="tNw-AA-Mhi" firstAttribute="leading" secondItem="sfE-sY-FfE" secondAttribute="leading" constant="20" id="YgB-JL-v68"/>
+                            <constraint firstItem="VTV-9y-q2t" firstAttribute="top" secondItem="dXx-Ba-qxC" secondAttribute="bottom" constant="28" id="YpI-Ew-sAR"/>
+                            <constraint firstAttribute="bottom" secondItem="CRK-oK-LOo" secondAttribute="bottom" id="ZAq-Kj-bku"/>
+                            <constraint firstItem="dXx-Ba-qxC" firstAttribute="top" secondItem="sfE-sY-FfE" secondAttribute="top" constant="-6" id="ZKY-i9-apR"/>
+                            <constraint firstItem="jCf-lm-5TE" firstAttribute="top" secondItem="tNw-AA-Mhi" secondAttribute="bottom" constant="64" id="hih-E4-K6j"/>
+                            <constraint firstAttribute="trailing" secondItem="CRK-oK-LOo" secondAttribute="trailing" id="hkw-tT-Pu9"/>
+                            <constraint firstItem="tmg-Tf-HFc" firstAttribute="leading" secondItem="sfE-sY-FfE" secondAttribute="leading" constant="20" id="i4D-QK-WsJ"/>
+                            <constraint firstItem="VTV-9y-q2t" firstAttribute="leading" secondItem="sfE-sY-FfE" secondAttribute="leading" constant="20" id="m7J-gq-dYU"/>
+                            <constraint firstItem="6fV-cg-cCf" firstAttribute="leading" secondItem="sfE-sY-FfE" secondAttribute="leading" id="mOD-hL-JHo"/>
+                            <constraint firstItem="dXx-Ba-qxC" firstAttribute="leading" secondItem="sfE-sY-FfE" secondAttribute="leading" constant="10" id="trc-P6-Aup"/>
+                            <constraint firstItem="jCf-lm-5TE" firstAttribute="leading" secondItem="sfE-sY-FfE" secondAttribute="leading" constant="24" id="vf7-Vy-chm"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="button" destination="exW-dU-stt" id="cBA-cR-q4I"/>
+                        <outlet property="collectionView" destination="jCf-lm-5TE" id="Fde-Fc-nZN"/>
+                        <outlet property="indicator" destination="Fr3-PK-rIY" id="2Ss-dT-YxG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tPX-nB-LUj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="902.89855072463774" y="75.669642857142847"/>
+        </scene>
     </scenes>
     <resources>
         <image name="api1" width="332" height="362"/>
+        <image name="blur" width="390" height="67"/>
         <image name="chevron.left" catalog="system" width="96" height="128"/>
         <namedColor name="Black">
             <color red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
