대표 이미지 세장 저장

--- a/fieldBy/Main/Info/ApiGuide/ApiGuide.storyboard
+++ b/fieldBy/Main/Info/ApiGuide/ApiGuide.storyboard
@@ -179,7 +179,7 @@
                                     <constraint firstAttribute="height" constant="114" id="sVh-A3-4Z3"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dXx-Ba-qxC">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dXx-Ba-qxC">
                                 <rect key="frame" x="10" y="38" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="5ql-SS-R0P"/>
